<resources>
    <string name="app_name">Whautomate</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="whatsapp_suffix">sent by Whautomate</string>
    <string name="event_name">Event</string>
    <string name="phone">Phone Number with Country Code</string>
    <string name="pick_contact">Pick Contact</string>
    <string name="submit">Add Event</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
</resources>
